added new junit module to pom.xml. Trying to give more memory to the JVM when running tests.