@@ -119,10 +119,24 @@
 						<!-- Sitio en el que esta el fichero anterior -->
 						<descriptor>src/main/assembly/dep.xml</descriptor>
 					</descriptors>
-				</configuration>
+					</configuration>
 
 			</plugin>
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.surefire</groupId>
+						<artifactId>surefire-junit47</artifactId>
+						<version>2.12</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<argLine>-Xms512m -Xmx4096m -XX:MaxPermSize=4096m</argLine>
+				</configuration>
+			</plugin>
 
 		</plugins>
 	</build>
@@ -149,7 +163,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.8.1</version>
 			<scope>test</scope>
 		</dependency>
 
